welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:5: error: type mismatch;
 found   : Unit
 required: Boolean
        	f=true}
                 ^answerCell:7: error: type mismatch;
 found   : Unit
 required: Boolean
	f=true}
         ^answerCell:8: error: type mismatch;
 found   : Unit
 required: Boolean
    else{ f=false}    	
           ^answerCell:10: error: type mismatch;
 found   : Unit
 required: Boolean
	f=false
         ^